--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -493,14 +493,25 @@
 					{{#if (or (eq actor.data.bodyType.name "octopod") (eq actor.data.bodyType.name "humanoid") (eq actor.data.bodyType.name "wingedHumanoid") (eq actor.data.bodyType.name "hexapod") (eq actor.data.bodyType.name "wingedHexapod") (eq actor.data.bodyType.name "centaur") (eq actor.data.bodyType.name "avian"))}}
 						<div class="hitLocations">
 							<div class="tooltip location-skull">
-								{{data.bodyType.drTypesOne.skull}} / {{data.bodyType.drTypesTwo.skull}}
-								<span class="tooltiptext">
-									<span style="text-decoration: underline">Skull -7 (-5 from the back)</span><br>
-									4x injury except tox<br>
-									Any injury causing shock requires stun/knockdown<br>
-									Major wound causes a roll @ -10<br>
-									Bleed every 30 seconds<br>
-								</span>
+								{{#if (eq actor.data.bodyType.name "octopod")}}
+									{{data.bodyType.drTypesOne.brain}} / {{data.bodyType.drTypesTwo.brain}}
+									<span class="tooltiptext">
+										<span style="text-decoration: underline">Brain -7 (-5 from the back)</span><br>
+										4x injury except tox<br>
+										Any injury causing shock requires stun/knockdown<br>
+										Major wound causes a roll @ -10<br>
+										Bleed every 30 seconds<br>
+									</span>
+								{{else}}
+									{{data.bodyType.drTypesOne.skull}} / {{data.bodyType.drTypesTwo.skull}}
+									<span class="tooltiptext">
+										<span style="text-decoration: underline">Skull -7 (-5 from the back)</span><br>
+										4x injury except tox<br>
+										Any injury causing shock requires stun/knockdown<br>
+										Major wound causes a roll @ -10<br>
+										Bleed every 30 seconds<br>
+									</span>
+								{{/if}}
 							</div>
 							<div class="tooltip location-ear-left">
 								{{data.bodyType.drTypesOne.faceears}} / {{data.bodyType.drTypesTwo.faceears}}
@@ -1618,7 +1629,7 @@
 									</div>
 								</span>
 							</div>
-							<div class="tooltip location-digestive">
+							<div class="tooltip location-digestive" style="padding-left: 75px; padding-top: 30px;">
 								{{data.bodyType.drTypesOne.abdomendigestiveTract}} / {{data.bodyType.drTypesTwo.abdomendigestiveTract}}
 								<span class="tooltiptext">
 									<div style="border-bottom: 2px white solid">
