--- a/gurps4e.css
+++ b/gurps4e.css
@@ -128,8 +128,6 @@
 	grid-area: weight;
 }
 
-
-
 #baseSkillRow {
 	grid-area: baseSkillRow;
 	display: grid;
@@ -311,7 +309,8 @@
 							"st 		dx 			iq 			ht"
 							"lst 		speed 		per			hts"
 							"sst 		move 		will		htk"
-							"z2			dodge 		fr			z1";
+							"z2			dodge 		fr			z1"
+							"z2			z3			senses		z1";
 	grid-template-columns: repeat(4,auto);
 	grid-gap: 5px;
 }
@@ -332,6 +331,14 @@
 	width: 5ch !important;
 }
 
+.senseVal {
+	width: 15ch !important;
+}
+
+.senseMod {
+	width: 2ch !important;
+}
+
 .attack {
 	display: grid;
 	grid-template-columns: 1fr auto auto 32px;
@@ -345,6 +352,12 @@
 .primary-attribute {
 	display: grid;
 	grid-template-columns: auto 2fr 2fr 2fr auto;
+	padding: 2px;
+	border: 1px dotted grey;
+	margin: 1px;
+}
+
+attribute-senses {
 	padding: 2px;
 	border: 1px dotted grey;
 	margin: 1px;
@@ -671,6 +684,13 @@
 	background-color: rgba(0, 0, 255, 0.05);
 }
 
+#senses {
+	grid-area: senses;
+	align-self: center;
+	background-color: rgba(0, 0, 255, 0.05);
+}
+
+
 #will {
 	grid-area: will;
 	display: grid;
@@ -713,6 +733,22 @@
 	background-color: rgba(255, 255, 0, 0.05);
 }
 
+#vis label:nth-child(1) {
+	padding-right: 67px;
+}
+
+#hear label:nth-child(1) {
+	padding-right: 59px;
+}
+
+#smell label:nth-child(1) {
+	padding-right: 29px;
+}
+
+#touch label:nth-child(1) {
+	padding-right: 69px;
+}
+
 #z1 {
 	grid-area: z1;
 	display: grid;
@@ -721,6 +757,12 @@
 
 #z2 {
 	grid-area: z2;
+	display: grid;
+	align-self: center;
+}
+
+#z3 {
+	grid-area: z3;
 	display: grid;
 	align-self: center;
 }
