Added bottom border to the senses accordion

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -188,7 +188,7 @@
 							</div>
 						{{/each}}
 						<div id="senses">
-							<div style="text-align: center;">
+							<div style="text-align: center; border-bottom: 2px solid rgba(0, 0, 255, 0.1); margin-bottom: 5px;">
 								<label for="showSenses" style="font-weight: bold; font-size: x-large; display: block;">
 									{{#if (eq data.flag.showSenses true) }}
 										<i class="fas fa-angle-up"></i>
