--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -202,7 +202,7 @@
 								{{#each data.senses as |sense id|}}
 									<div class="attribute-senses" id="{{sense.id}}">
 										{{#if (or (eq sense.id "extra1") (eq sense.id "extra2")) }}
-											<input type="text" name="data.senses.{{id}}.abbr" class="senseVal" value="{{sense.abbr}}"/>
+											<input type="text" name="data.senses.{{id}}.abbr" class="senseVal" value="{{sense.abbr}}" style="text-align: left;"/>
 										{{else}}
 											<label style="font-weight: bold" class="senseVal">{{sense.abbr}}</label>
 										{{/if}}
